# solarsim

./: Cargo.toml  README.md
.claude/: settings.local.json
shaders/: physics.wgsl  render.wgsl
src/: camera.rs  gpu.rs  main.rs  simulation.rs  solar_system.rs  types.rs
