[package]
name = "starsystem-sim"
version = "0.1.0"
edition = "2021"
description = "High-performance GPU-accelerated star system simulation with swarm behavior"

[dependencies]
wgpu = "0.20"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
rand = "0.8"
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
